tests/parser/invalidinput/invalidproc2.idp
procedure main(){
    retur 1
}